@@ -1,3 +1,8 @@
+2015-12-06  Carl Hetherington  <cth@carlh.net>
+
+	* Add menu option to send a project to the
+	batch converter (#770).
+
 2015-12-10  Carl Hetherington  <cth@carlh.net>
 
 	* Put ISDCF name subtitle language in lower case if all subs are
